# agro-climate-intelligence-agent

./: .env.example  .gitignore  README.md  app_agent.py  app_mcp.py  app_ui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agro_agent/: __init__.py  config.py  crop_rules.py  farms.py  geo_utils.py  geocode.py  geolocation_link.py  guardrail.py  map_ui.py  plan_history.py  regions.py  report.py  runner.py  workflow.py
agro_agent/components/geolocation_link/: index.html
agro_agent/data/: regions.json
agro_climate_intelligence_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_crop_rules.py  test_guardrail.py  test_plan_history.py  test_report.py  test_runner.py
